# CareerCopilot-SkillMemory

./: .gitignore  AGENTS.md  CHANGELOG_DEV.md  IMPLEMENTATION_PLAN.md  MILESTONES.md  README.md  RUNBOOK.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  matcher.py  schemas.py  store.py
app/core/ingestion/: __init__.py  adapters.py  live_fetch.py  manager.py
configs/: USER_PROFILE.yaml  sources.yaml
docs/: API.md  ARCHITECTURE.md  REFERENCE_MAP.md
tests/fixtures/: boss_zhipin_jobs.html  dewu_positions.json
tests/integration/: test_api.py
tests/unit/: test_ingestion.py  test_schemas.py
